# Weigo

./: ._CMakeLists.txt  ._game.qml  ._main.qml  ._navigation.qml  ._rooms.qml  CMakeLists.txt  CMakeLists.txt.user.8055b31  CMakeLists.txt.user.f489bbe  LICENSE  README.md  game.qml  goboard.cpp  goboard.h  main.cpp  main.qml  navigation.qml  profile.qml  qml.qrc  registration.qml  rooms.qml  settings.qml  sgf_reader.cpp  sgf_reader.h
graphic/logo/: ._weigo.psd  weigo.psd
